# file-encoder

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
core/: defs.hpp
frompng/: CMakeLists.txt  main.cpp
inverse/: CMakeLists.txt  main.cpp
reverse/: CMakeLists.txt  main.cpp
topng/: CMakeLists.txt  main.cpp
